--- a/style.css
+++ b/style.css
@@ -2,3 +2,29 @@ body{
     height:100vh;
     background-color:hotpink ;
 }
+
+.location{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.game-board {
+    display: grid;
+    height: 90vh;
+    width: 90vw;
+    border: 10px solid black;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    
+    }
+
+
+.box{
+   
+    }
+
