--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ title{
     height: 90vh;
     width: 90vw;
     border: 10px solid black;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
     background-color: aliceblue;
     grid-column-gap: 10px;
@@ -51,3 +51,8 @@ title{
 .card.back{
     transform: rotateX(180deg);
 }
+
+/* .front {
+    height: 50px;
+    width: 50px;
+} */
