--- a/style.css
+++ b/style.css
@@ -27,15 +27,27 @@ title{
     display: grid;
     height: 90vh;
     width: 90vw;
-    border: 10px solid black;
+    /* border: 10px solid black; */
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     
     }
 
+    /* CSS for flip animation */
+.colorCard {
+    /* Other styles */
+    transition: transform 0.5s ease; /* Add transition for smooth animation */
+    border-radius: 5px;
+
+  }
+  
+  .flip {
+    transform: rotateY(180deg); /* Rotate the card to simulate a flip */
+  }
+  
 
 
 .card{
