--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+@font-face {
+    font-family: Quicksand;
+    src: url(./Quicksand-VariableFont_wght.ttf);
+}
+
+
 body{
     height:100vh;
-    background-color: grey ;
+    background-color: rgb(0, 0, 0) ;
     overflow: hidden;
     margin: 0;
     display: flex;
@@ -50,19 +56,50 @@ title{
   
 
 
-.card{
-    border: 5px solid pink;
-    transform-style:preserve-3d ;
-    transition: transform 3s;
+
+  .winLocation {
+    position: absolute;
+    z-index: 3;
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; /* Make the winLocation div take up the full width */
+    height: 100%; /* Make the winLocation div take up the full height */
 }
 
-.card.flipped{
-    transform: rotateX(180deg);
+.winScreen{
+   background-color: rgb(0, 255, 251);
+   width: 40vw;
+   height: 15vh;
+   border: solid 10px rgb(255, 255, 255) ;
+   border-radius: 30px;
+   margin-bottom: 5vh;
 }
 
-.card.back{
-    transform: rotateX(180deg);
+.winText{
+    font-family: Quicksand;
+    font-weight: 600;
+    text-align: center;
+    font-size: 50px;
 }
+
+.restartButton {
+    background-color: rgb(0, 255, 251);
+    width: 20vw;
+    height: 7vh;
+    border: solid 10px rgb(255, 255, 255);
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.restartIcon{
+    height: 5vh;
+    width: 15vw;
+}
+
 
 /* .front {
     height: 50px;
