--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh;
+    height: auto;
     width: 30vw;
     animation: restartIconBorderAnimation 10s infinite alternate; /* Apply animation */
 }
